@@ -1,3 +1,15 @@
+2019-11-22  Guillaume Emont  <guijemont@igalia.com>
+
+        Skip tests that fail on arm and mips devices
+        https://bugs.webkit.org/show_bug.cgi?id=204522
+
+        Unreviewed gardening.
+
+
+        * stress/generator-cell-with-type.js:
+        * stress/stack-overflow-in-yarr-byteCompile.js:
+        * stress/toctou-having-a-bad-time-new-array.js:
+
 2019-11-21  Mark Lam  <mark.lam@apple.com>
 
         replaceUsingStringSearch() should not use CachedCall with host functions.
